--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Keshav Garg</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
-                <a href="#">Hire me</a>
+                <a href="#contact">Hire me</a>
             </div>
         </div>
     </section>
@@ -56,7 +56,11 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm Keshav and I'm a <span class="typing-2"></span></div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ut voluptatum eveniet doloremque autem excepturi eaque, sit laboriosam voluptatem nisi delectus. Facere explicabo hic minus accusamus alias fuga nihil dolorum quae. Explicabo illo unde, odio consequatur ipsam possimus veritatis, placeat, ab molestiae velit inventore exercitationem consequuntur blanditiis omnis beatae. Dolor iste excepturi ratione soluta quas culpa voluptatum repudiandae harum non.</p>
+                    <p>Hey! I am Native Android Developer. I have extensively worked on Android studio with Java for Android Development.<br>
+                        I am a Pre-Final year student at Malaviya National Institution of Technology pursuing Computer Science Engineering.<br>
+                        I am KVPY scholar, a Prestigious recognition given by the Department of Science, Govt. of India.<br>
+                        I have a good knowledge of Data Structures and Algorithms. I have good marketing experiences also.
+                    </p>
                     <a href="#">Download CV</a>
                 </div>
             </div>
@@ -83,14 +87,6 @@
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
                     </div>
                 </div>
-                <div class="card">
-                    <div class="box">
-                        <i class="fas fa-code"></i>
-                        <div class="text">Apps Design</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
-                    </div>
-                </div>
-               </div>
             </div>
         </div>
     </section>
