--- a/index.html
+++ b/index.html
@@ -74,9 +74,10 @@
             <div class="serv-content">
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-paint-brush"></i>
-                        <div class="text">Web Design</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                        <img src="images/Mnit_logo.png" alt="">
+                        <div class="text">Malaviya National Institute of Technology, Jaipur</div>
+                        <p>B.tech in Computer Science Engineering</p>
+                        <p>2018-2022</p>
                         <a href="#">Download CV</a>
                     </div>
                 </div>
