--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
                         <div class="text">Malaviya National Institute of Technology, Jaipur</div>
                         <p>B.tech in Computer Science Engineering</p>
                         <p>2018-2022</p>
-                        <a href="#">Download CV</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-chart-line"></i>
-                        <div class="text">Advertising</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                        <img src="images/dhps-logo.png" alt="">
+                        <div class="text">Dhanbad Public School, Dhanbad</div>
+                        <p>CBSE XII with 92.6%</p>
+                        <p>CBSE X with 10 CGPA</p>
                     </div>
                 </div>
             </div>
