--- a/index.html
+++ b/index.html
@@ -153,37 +153,60 @@
                     <div class="box">
                         <img src="images/project-1.jpg" alt="">
                         <div class="text">Inside MNIT</div>
-                        
+                        <div class="tech">
+                           <span><img src="images/android.png" alt=""></span>
+                        </div>
                         <p>Android Application is made for Navigation within the peripherals of my College MNIT.<br>
                         Used Google Map API for integrating the MapView and designed a custom Routing system which consists of all the routes of different places. </p>
+                        <a href="https://github.com/gargk747/INSIDEMNIT_new">Link to Project</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <img src="images/project-2.jpg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <div class="text">BSAEH-2021</div>
+                        <div class="tech">
+                            <span><img src="images/android.png" alt=""></span>
+                         </div>
+                        <p>Android Application for International Conference on Biotechnology for Sustainable Agriculture Environment and Health (BSAEH-2021).<br>
+                            Using various layouts and views, applications contains the Schedule of the variousevents and details regarding the events by fetching data from Firebase.
+                        </p>
+                        <a href="https://github.com/gargk747/BRSI-2020-JAIPUR">Link to Project</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <img src="images/project-3.jpg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <div class="text">Invisible Cloak</div>
+                        <div class="tech">
+                            <span><img src="images/python.png" alt=""></span>
+                         </div>
+                        <p>This technique is opposite to the Green Screening. In green screening, we remove background but here we will remove the foreground frame.</p>
+                        <a href="https://github.com/gargk747/BRSI-2020-JAIPUR">Link to Project</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <img src="images/project-4.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <div class="text">Movie Buff</div>
+                        <div class="tech">
+                            <span><img src="images/android.png" alt=""></span>
+                         </div>
+                        <p>Android Application containing list of Movies with all thier details including Release date, Cast, Trailers, Reviews, etc.<br>
+                            Displayed the movie list using the TheMovieDB API for calls and datas using REST API tokens.
+                        </p>
+                        <a href="https://github.com/gargk747/Movie_List">Link to Project</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <img src="images/project-5.jpg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <div class="text">Attendance Management System</div>
+                        <div class="tech">
+                            <span><img src="images/android.png" alt=""></span>
+                         </div>
+                        <p>Classroom Attendance Management System is a Mobile Application developed for daily student attendance in classroom of schools, colleges and institutes.</p>
+                        <a href="https://github.com/gargk747/Attendance-Management-System">Link to Project</a>
                     </div>
                 </div>
             </div>
