--- a/index.html
+++ b/index.html
@@ -220,27 +220,45 @@
             <div class="contact-content">
                 <div class="column left">
                     <div class="text">Get in Touch</div>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos harum corporis fuga corrupti. Doloribus quis soluta nesciunt veritatis vitae nobis?</p>
                     <div class="icons">
                         <div class="row">
-                            <i class="fas fa-user"></i>
+                            <i class="fab fa-linkedin"></i>
                             <div class="info">
-                                <div class="head">Name</div>
-                                <div class="sub-title">Keshav Garg</div>
+                                <a href="https://www.linkedin.com/in/gargk747/">
+                                <div class="head">LinkedIn</div>
+                                </a>
                             </div>
                         </div>
                         <div class="row">
-                            <i class="fas fa-map-marker-alt"></i>
+                            <i class="fab fa-github"></i>
                             <div class="info">
-                                <div class="head">Address</div>
-                                <div class="sub-title">Surkhet, Nepal</div>
+                                <a href="https://www.github.com/gargk747/">
+                                <div class="head">GitHub</div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <i class="fab fa-twitter"></i>
+                            <div class="info">
+                                <a href="https://twitter.com/gargk747">
+                                <div class="head">Twitter</div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <i class="fab fa-facebook"></i>
+                            <div class="info">
+                                <a href="https://www.facebook.com/gargk747">
+                                <div class="head">Facebook</div>
+                                </a>
                             </div>
                         </div>
                         <div class="row">
                             <i class="fas fa-envelope"></i>
                             <div class="info">
-                                <div class="head">Email</div>
-                                <div class="sub-title">gargk747@gmail.com</div>
+                                <a href="mailto:gargk747@gmail.com">
+                                <div class="head">gargk747@gmail.com</div>
+                                </a>
                             </div>
                         </div>
                     </div>
