--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                         <img src="images/project-5.jpg" alt="">
                         <div class="text">Attendance Management System</div>
                         <div class="tech">
-                            <span><img src="images/android.png" alt=""></span>
+                            <span><img src="images/android_2.png" alt=""></span>
                          </div>
                         <p>Classroom Attendance Management System is a Mobile Application developed for daily student attendance in classroom of schools, colleges and institutes.</p>
                         <a href="https://github.com/gargk747/Attendance-Management-System">Link to Project</a>
