Dev.to link updated

--- a/index.html
+++ b/index.html
@@ -237,6 +237,14 @@
                                 </a>
                             </div>
                         </div>
+                        div class="row">
+                            <i class="fab fa-dev"></i>
+                            <div class="info">
+                                <a href="https://dev.to/gargk747">
+                                <div class="head">Dev</div>
+                                </a>
+                            </div>
+                        </div>
                         <div class="row">
                             <i class="fab fa-twitter"></i>
                             <div class="info">
