Dev.to link updated

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                                 </a>
                             </div>
                         </div>
-                        div class="row">
+                        <div class="row">
                             <i class="fab fa-dev"></i>
                             <div class="info">
                                 <a href="https://dev.to/gargk747">
