--- a/index.html
+++ b/index.html
@@ -221,7 +221,54 @@
                 <div class="column left">
                     <div class="text">Get in Touch</div>
                     <div class="icons">
-                        <div>Hello</div>
+                        <div class="row">
+                            <i class="fab fa-linkedin"></i>
+                            <div class="info">
+                                <a href="https://www.linkedin.com/in/gargk747/">
+                                <div class="head">LinkedIn</div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <i class="fab fa-github"></i>
+                            <div class="info">
+                                <a href="https://www.github.com/gargk747/">
+                                <div class="head">GitHub</div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <i class="fab fa-dev"></i>
+                            <div class="info">
+                                <a href="https://dev.to/gargk747">
+                                <div class="head">Dev</div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <i class="fab fa-twitter"></i>
+                            <div class="info">
+                                <a href="https://twitter.com/gargk747">
+                                <div class="head">Twitter</div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <i class="fab fa-facebook"></i>
+                            <div class="info">
+                                <a href="https://www.facebook.com/gargk747">
+                                <div class="head">Facebook</div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <i class="fas fa-envelope"></i>
+                            <div class="info">
+                                <a href="mailto:gargk747@gmail.com">
+                                <div class="head">gargk747@gmail.com</div>
+                                </a>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="column right">
