--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         I am KVPY scholar, a Prestigious recognition given by the Department of Science, Govt. of India.<br>
                         I have a good knowledge of Data Structures and Algorithms. I have good marketing experiences also.
                     </p>
-                    <a href="https://drive.google.com/file/d/1-wSg2TYJAeB-sE70ZCGHfXzfcawBEWTt/view?usp=sharing">Download CV</a>
+                    <a href="https://drive.google.com/uc?id=1-wSg2TYJAeB-sE70ZCGHfXzfcawBEWTt&export=download">Download CV</a>
                 </div>
             </div>
         </div>
