Education- College Updated

--- a/index.html
+++ b/index.html
@@ -76,8 +76,11 @@
                     <div class="box">
                         <img src="images/Mnit_logo.png" alt="" >
                         <div class="text">Malaviya National Institute of Technology, Jaipur</div>
-                        <p>B.tech in Computer Science Engineering</p>
-                        <p>2018-2022</p>
+                        <p>B.tech in Computer Science Engineering, 2018-2022</p>
+                        <ul>
+                            <li>Mentor at Student Mentorship Program</li>
+                            <li>Member of UBA</li>
+                        </ul>
                     </div>
                 </div>
                 <div class="card">
