--- a/index.html
+++ b/index.html
@@ -89,6 +89,11 @@
                         <div class="text">Dhanbad Public School, Dhanbad</div>
                         <p>CBSE XII with 92.6%</p>
                         <p>CBSE X with 10 CGPA</p>
+                        <ul>
+                            <li>Kishore Vaigyanik Protsahan Yojana (KVPY) 2017 Scholar</li>
+                            <li>Top 1 %ile in National Financial Literacy Assessment Test(NFLAT) 2015</li>
+                            <li>Zone topper in Maths & Science Olympiad 2016 organised by SOF</li>
+                        </ul>
                     </div>
                 </div>
             </div>
