Experience tab started

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
                 <li><a href="#education" class="menu-btn">Education</a></li>
+                <li><a href="#experiences" class="menu-btn">Experiences</a></li>
                 <li><a href="#skills" class="menu-btn">Skills</a></li>
                 <li><a href="#projects" class="menu-btn">Projects</a></li>
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
@@ -307,7 +308,7 @@
 
     <!-- footer section start -->
     <footer>
-        <span>Created By Keshav Garg</a> | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
+        <span>Created By Keshav Garg</span> | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
     </footer>
 
     <script src="script.js"></script>
